[tool.poetry]
name = "spareroom-co-uk-webscraping-script"
version = "0.1.0"
description = ""
authors = ["LJlkdskdjflsa <liliangjya@gmail.com>"]
readme = "README.md"
packages = [{include = "spareroom"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.16.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
